<resources>
    <string name="app_name">Got It!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_activity_title">Log In</string>
    <string name="view_all">View All</string>
    <string name="view">View</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="cancellations">Cancellations</string>
    <string name="completions">Completions</string>
    <string name="revenue">Revenue</string>
    <string name="complaints">Complaints</string>
    <string name="users">Users</string>
    <string name="button">Button</string>
    <string name="idk">...</string>
    <string name="filter">FILTER</string>
    <string name="rev_gi">Got It! Revenue</string>
    <string name="rev_dri">Driver Revenue</string>
    <string name="rev_ven">Vendor Revenue</string>
    <string name="delivered">Delivered Orders</string>

</resources>
