<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/chart"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_cancellations"
            android:icon="@drawable/chart"
            android:title="@string/cancellations" />
        <item
            android:id="@+id/nav_complaints"
            android:icon="@drawable/chart"
            android:title="@string/complaints" />
        <item
            android:id="@+id/nav_completions"
            android:icon="@drawable/chart"
            android:title="@string/completions" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/chart"
            android:title="@string/users" />
        <item
            android:id="@+id/nav_revenue"
            android:icon="@drawable/chart"
            android:title="@string/revenue" />
    </group>

</menu>
